--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,17 @@ body,
   font-family: "Source Sans 3", sans-serif;
 }
 
+.content {
+  overflow-y: scroll;
+}
+
 .app {
   display: flex;
   position: relative;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
 }
 
 ::-webkit-scrollbar-track {
